<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">本软件仅提供磁力服务, 并不储存任何网络资源 \n本软件完全免费,所有数据均来源网络,请勿用于非法用途</string>
    <string name="action_browser">浏览</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">Settings</string>
    <string name="ad">获取专业版</string>
    <string name="adm_not_found">你还没有安装ADM, 请先到应用市场下载 或 尝试方式2（请检查是否禁用了读取已安装应用的权限）</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">神奇磁力</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aria2">推送至Aria2</string>
    <string name="aria2_not_found">你还没有设置Aria2服务器</string>
    <string name="bookmark">书签</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_download">下载</string>
    <string name="btn_ok">确定</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collection">收藏</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">d00df1add2184cdea58c13447d347666</string>
    <string name="comfirm_delete">确定删除?</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy">复制</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_web_client_id">104710680993-9tf5grfq6134armf6h23j5itg53k4fk0.apps.googleusercontent.com</string>
    <string name="define_AndroidIconics">year;owner</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="define_materialdrawer">year;owner</string>
    <string name="define_materialize">year;owner</string>
    <string name="define_zxingandroidembedded" />
    <string name="dg_host">域名或IP</string>
    <string name="dg_name">显示名称(可选)</string>
    <string name="dg_password">密码(可选)</string>
    <string name="dg_port">端口(默认6800)</string>
    <string name="dg_token">Token(可选)</string>
    <string name="dg_username">用户名(可选)</string>
    <string name="donate_help" />
    <string name="download_external">下载</string>
    <string name="download_local">ADM下载</string>
    <string name="download_remote">远程</string>
    <string name="download_xunlei">迅雷下载</string>
    <string name="empty">空空如也</string>
    <string name="empty_magnet_ftn">没有找到结果, 请「刷新重试」或「尝试其他链接」</string>
    <string name="error">发生不可描述的错误</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_download_not_found">没有找到可下载的软件</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_loading">加载出错,请重试</string>
    <string name="exit">退出</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="feedback">反馈</string>
    <string name="fragment_adblock_settings_aa_enabled_key">adblock_aa_enabled</string>
    <string name="fragment_adblock_settings_aa_enabled_summary">Acceptable ads are non-annoying ads that comply with a strict ad standard. They help generate revenue for content creators and do not interfere with the content you are viewing. This feature is turned on by default, but you can turn it off at any time.</string>
    <string name="fragment_adblock_settings_aa_enabled_title">Acceptable Ads</string>
    <string name="fragment_adblock_settings_al_key">adblock_al_domains</string>
    <string name="fragment_adblock_settings_al_title">Allowlist</string>
    <string name="fragment_adblock_settings_allowed_connection_type">Configure automatic updates</string>
    <string name="fragment_adblock_settings_allowed_connection_type_key">adblock_allowed_connection_type</string>
    <string name="fragment_adblock_settings_enabled_key">adblock_enabled</string>
    <string name="fragment_adblock_settings_enabled_summary">Allow ad blocking on websites in this app</string>
    <string name="fragment_adblock_settings_enabled_title">Adblock Plus</string>
    <string name="fragment_adblock_settings_filter_lists_summary">Add or remove language-specific filter lists</string>
    <string name="fragment_adblock_settings_filter_lists_title">Filter lists</string>
    <string name="fragment_adblock_settings_wl_summary">Support your favorite websites by adding them to this list. You might see ads on them.</string>
    <string name="item_backup">备份数据</string>
    <string name="item_restore">恢复数据</string>
    <string name="item_speedtest">一键测速</string>
    <string name="just_play">MX Player 播放</string>
    <string name="key_add_aria2">add_aria2</string>
    <string name="key_auto_backup">auto_backup</string>
    <string name="key_auto_clear_cache">auto_clear_cache</string>
    <string name="key_backup_dir">backup_dir</string>
    <string name="key_battery">battery</string>
    <string name="key_check_update">check_update</string>
    <string name="key_clear_webview">clear_webview</string>
    <string name="key_dlna_fix_speed">dlna_fix_speed</string>
    <string name="key_dlna_mode">dlna_mode</string>
    <string name="key_dont_use_adblock">dont_use_adblock</string>
    <string name="key_fix_white_status_bar">fix_white_status_bar</string>
    <string name="key_hard_codec">hard_codec</string>
    <string name="key_max_concurrent">max_current</string>
    <string name="key_night_mode">night_mode</string>
    <string name="key_player">player</string>
    <string name="key_question">question</string>
    <string name="key_rotate">rotate</string>
    <string name="key_select_aria2">select_aria2</string>
    <string name="key_selected_storage">selected_storage</string>
    <string name="key_show_history">record_history</string>
    <string name="key_start_adblock_on_start">start_adbock</string>
    <string name="mx_player">下载 MX Player</string>
    <string name="play_build_in">播放</string>
    <string name="pref_adblock">内置浏览器预加载</string>
    <string name="pref_add_aria2_server">添加Aria2服务器</string>
    <string name="pref_aria2">Aria2</string>
    <string name="pref_backup_dir">数据备份目录</string>
    <string name="pref_check_update">检查更新</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_other">其他</string>
    <string name="pref_select_aria2c">选择Aria2服务器</string>
    <string name="pref_select_storage">缓存目录</string>
    <string name="pref_show_history">记录历史</string>
    <string name="pref_summary_current_aria2">当前:%s</string>
    <string name="push_to_cloud_torrent">Cloud Torrent</string>
    <string name="push_to_wky">推送玩客云</string>
    <string name="push_to_xiaomi_router">小米路由远程下载</string>
    <string name="push_to_xiazaibao">推送下载宝</string>
    <string name="title_clear_collection">清空收藏</string>
    <string name="title_clear_history">清空历史</string>
    <string name="title_setting">设置</string>
    <string name="torrent">打开种子文件</string>
</resources>