<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.SwitchPreferenceCompat
        android:title="@string/fragment_adblock_settings_enabled_title"
        android:key="@string/fragment_adblock_settings_enabled_key"
        android:summary="@string/fragment_adblock_settings_enabled_summary"
        app:iconSpaceReserved="false"/>
    <androidx.preference.MultiSelectListPreference
        android:title="@string/fragment_adblock_settings_filter_lists_title"
        android:key="adblock_filter_lists"
        android:summary="@string/fragment_adblock_settings_filter_lists_summary"
        android:positiveButtonText="@android:string/ok"
        android:negativeButtonText="@android:string/cancel"
        app:iconSpaceReserved="false"/>
    <androidx.preference.SwitchPreferenceCompat
        android:title="@string/fragment_adblock_settings_aa_enabled_title"
        android:key="@string/fragment_adblock_settings_aa_enabled_key"
        android:summary="@string/fragment_adblock_settings_aa_enabled_summary"
        app:iconSpaceReserved="false"/>
    <androidx.preference.Preference
        android:title="@string/fragment_adblock_settings_al_title"
        android:key="@string/fragment_adblock_settings_al_key"
        android:summary="@string/fragment_adblock_settings_wl_summary"
        app:iconSpaceReserved="false"/>
    <androidx.preference.ListPreference
        android:title="@string/fragment_adblock_settings_allowed_connection_type"
        android:key="@string/fragment_adblock_settings_allowed_connection_type_key"
        android:summary="%s"
        app:iconSpaceReserved="false"/>
</androidx.preference.PreferenceScreen>
