<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:divider="@android:color/transparent">
    <PreferenceCategory
        android:title="@string/app_name"
        android:key="category_magic_magnet">
        <SwitchPreference
            android:icon="@drawable/ic_history_setting"
            android:title="@string/pref_show_history"
            android:key="@string/key_show_history"
            android:defaultValue="true"/>
        <SwitchPreference
            android:icon="@drawable/ic_folder_setting"
            android:title="自动备份"
            android:key="@string/key_auto_backup"
            android:summary="收藏、历史、书签有新增或更改时自动备份到本地"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_browser_setting"
            android:title="@string/pref_adblock"
            android:key="@string/key_start_adblock_on_start"
            android:summary="开启后提升内置浏览器首次载入速度，启动app闪退请关闭此选项"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_website_setting"
            android:title="修复白色状态栏"
            android:key="@string/key_fix_white_status_bar"
            android:summary="某些系统状态栏显示全白，尝试打开此选项修复"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_codec_setting"
            android:visibility="invisible"
            android:title="默认硬解码"
            android:key="@string/key_hard_codec"
            android:summary="内置播放器默认开启硬解码"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_battery_setting"
            android:title="忽略电池优化"
            android:key="@string/key_battery"
            android:summary="允许app后台运行"
            android:defaultValue="false"/>
        <ListPreference
            android:icon="@drawable/ic_night_setting"
            android:entries="@array/night_mode_titles"
            android:title="夜间模式"
            android:key="@string/key_night_mode"
            android:summary="开启"
            android:defaultValue="system"
            android:entryValues="@array/night_mode_values"/>
        <ListPreference
            android:icon="@drawable/ic_dlna_mode_setting"
            android:entries="@array/dlna_mode"
            android:title="投屏方式"
            android:key="@string/key_dlna_mode"
            android:summary="方式1"
            android:defaultValue="1"
            android:entryValues="@array/dlna_mode_values"/>
        <SwitchPreference
            android:icon="@drawable/ic_dlna_mode_setting"
            android:title="改善投屏卡顿问题"
            android:key="@string/key_dlna_fix_speed"
            android:summary="如投屏使用有问题，尝试关闭次选项"
            android:defaultValue="true"/>
        <Preference
            android:icon="@drawable/ic_history_setting"
            android:title="清理Cookies和缓存"
            android:key="@string/key_clear_webview"/>
        <SwitchPreference
            android:icon="@drawable/ic_setting_rotate"
            android:title="播放器跟随屏幕转动"
            android:key="@string/key_rotate"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_aria2"
        android:key="category_aria2">
        <Preference
            android:icon="@drawable/ic_add_setting"
            android:title="@string/pref_add_aria2_server"
            android:key="@string/key_add_aria2"/>
        <ListPreference
            android:icon="@drawable/ic_down"
            android:entries="@array/aria2_servers"
            android:title="@string/pref_select_aria2c"
            android:key="@string/key_select_aria2"
            android:summary="@string/pref_summary_current_aria2"
            android:entryValues="@array/aria2_servers_value"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="实验性设置项">
        <SwitchPreference
            android:icon="@drawable/ic_browser_setting"
            android:title="内置浏览器兼容模式"
            android:key="@string/key_dont_use_adblock"
            android:summary="内置浏览器闪退的用户尝试开启兼容模式"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_browser_setting"
            android:title="自动清理缓存"
            android:key="@string/key_auto_clear_cache"
            android:defaultValue="true"/>
        <ListPreference
            android:icon="@drawable/ic_list_setting"
            android:entries="@array/concurrent_titles"
            android:title="缓存线程数"
            android:key="@string/key_max_concurrent"
            android:defaultValue="4"
            android:entryValues="@array/concurrent_values"/>
        <ListPreference
            android:icon="@drawable/ic_player_setting"
            android:entries="@array/key_player_list"
            android:title="播放器内核"
            android:key="@string/key_player"
            android:defaultValue="ijk"
            android:entryValues="@array/value_player_list"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other">
        <ListPreference
            android:icon="@drawable/ic_folder_setting"
            android:entries="@array/empty"
            android:title="@string/pref_select_storage"
            android:key="@string/key_selected_storage"
            android:entryValues="@array/empty"/>
        <Preference
            android:icon="@drawable/ic_folder_setting"
            android:title="@string/pref_backup_dir"
            android:key="@string/key_backup_dir"/>
        <Preference
            android:icon="@drawable/ic_update_setting"
            android:title="@string/pref_check_update"
            android:key="@string/key_check_update"/>
        <Preference
            android:icon="@drawable/ic_copy_setting"
            android:title="复制调试信息"
            android:key="copy_device_id"
            app:isPreferenceVisible="false"/>
        <Preference
            android:icon="@drawable/ic_website_setting"
            android:title="官网"
            android:key="website"/>
        <Preference
            android:icon="@drawable/ic_help_setting"
            android:title="常见问题"
            android:key="@string/key_question"/>
        <Preference
            android:icon="@drawable/ic_version_setting"
            android:title="当前版本"
            android:key="version"/>
    </PreferenceCategory>
</PreferenceScreen>
