<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_setting"
        android:title="@string/title_setting"/>
    <item
        android:id="@+id/item_feedback"
        android:visible="true"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/item_clear_collection"
        android:visible="false"
        android:title="@string/title_clear_collection"/>
    <item
        android:id="@+id/item_clear_history"
        android:visible="false"
        android:title="@string/title_clear_history"/>
    <item
        android:id="@+id/item_backup"
        android:title="@string/item_backup"/>
    <item
        android:id="@+id/item_restore"
        android:title="@string/item_restore"/>
    <item
        android:id="@+id/item_clear_cache"
        android:title="@string/clear_cache"/>
    <item
        android:id="@+id/speedtest"
        android:visible="false"
        android:title="@string/item_speedtest"/>
    <item
        android:id="@+id/item_show_bookmark"
        android:visible="false"
        android:title="书签"/>
    <item
        android:id="@+id/item_film_review_collection"
        android:visible="false"
        android:title="影评收藏"/>
    <item
        android:id="@+id/item_night_mode"
        android:title="夜间模式"/>
    <item
        android:id="@+id/check_update"
        android:title="检测更新"/>
    <item
        android:id="@+id/check_network"
        android:visible="false"
        android:title="网络检测"/>
    <item
        android:id="@+id/item_share"
        android:visible="false"
        android:title="分享「神奇磁力」"/>
    <item
        android:id="@+id/item_search_source"
        android:title="自定义搜索源"/>
    <item
        android:id="@+id/item_torrent"
        android:title="@string/torrent"/>
    <item
        android:id="@+id/item_clear_play_position"
        android:title="清除播放进度"/>
    <item
        android:id="@+id/item_download_mx"
        android:visible="false"
        android:title="@string/mx_player"/>
    <item
        android:id="@+id/item_random"
        android:visible="false"
        android:title="record"/>
    <item
        android:id="@+id/item_exit"
        android:title="@string/exit"/>
    <item
        android:icon="@drawable/ic_search_black_24dp"
        android:id="@+id/item_searh"
        android:visible="false"
        android:title="@string/action_search"
        app:showAsAction="always"/>
</menu>
