<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"
        android:fragment="com.magicmagnet.setting.SettingsActivity$GeneralPreferenceFragment"/>
    <header
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications"
        android:fragment="com.magicmagnet.setting.SettingsActivity$NotificationPreferenceFragment"/>
    <header
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync"
        android:fragment="com.magicmagnet.setting.SettingsActivity$DataSyncPreferenceFragment"/>
</preference-headers>
